added passage form and button to html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
       <h2>View scripture translations, side by side.</h2>
    </header>
    <main>
-
+      <h3>Enter a passage.</h3>
+      <form action="" method="GET">
+         <div>
+           <label for="passage">Passage:</label>
+           <input type="text" id="name" name="user_name">
+         </div>
+       </form>
+       <div class="button">
+         <button type="submit">Search</button>
+       </div>
    </main>
    <footer>
 
