added placeholder text to form, and basic css, js

--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
       <h2>View scripture translations, side by side.</h2>
    </header>
    <main>
-      <h3>Enter a passage.</h3>
       <form action="" method="GET">
          <div>
-           <label for="passage">Passage:</label>
-           <input type="text" id="name" name="user_name">
+           <label for="passage">Enter a Passage:</label>
+           <input type="text" id="passage"  name="quicksearch" placeholder="ex: Ephesians 2:8-10" value="" autocomplete="off">
+         </div>
+         <div class="button">
+           <button type="button">Search</button>
          </div>
        </form>
-       <div class="button">
-         <button type="submit">Search</button>
-       </div>
    </main>
    <footer>
 
