several changes. mostly starting fresh with js

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
    <title>Project Logos</title>
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-   <script src="main.js"></script>
 </head>
 <body>
    <header>
@@ -20,12 +19,15 @@
            <input type="text" id="passage"  name="quicksearch" placeholder="ex: Ephesians 2:8-10" value="" autocomplete="off">
          </div>
          <div class="button">
-           <button type="button">Search</button>
+           <button id="Search">Search</button>
          </div>
        </form>
+       <div id="passage-left"></div>
+       <div id="passage-left-verse"></div>
    </main>
    <footer>
 
    </footer>
+<script src="main.js"></script>
 </body>
 </html>
