fixed js to get entire passage. not solved selecting translate

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
            <button id="Search">Search</button>
          </div>
        </form>
+       <div class = translation type="text">
+         <select>
+          <option value="web">World English Bible</option>
+          <option value="kjv">King James Version</option>
+          <option value="clementine">Clementine Latin Vulgate</option>
+          <option value="almeida">Portuguese Almeida Bible</option>
+          <option value="rccv">Romanian Cornilescu Version</option>
+          <option value="cherokee">Cherokee New Testament</option>
+         </select>
+       </div>
        <div id="passage-left"></div>
        <div id="passage-left-verse"></div>
    </main>
