two translations finally appear, though selection bar doesnt function

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
          <div class="button">
            <button id="Search">Search</button>
          </div>
-       </form>
-       <div class = translation type="text">
-         <select>
+      </form>
+      <select id = translation>
           <option value="web">World English Bible</option>
           <option value="kjv">King James Version</option>
-          <option value="clementine">Clementine Latin Vulgate</option>
+          <!-- <option value="clementine">Clementine Latin Vulgate</option>
           <option value="almeida">Portuguese Almeida Bible</option>
           <option value="rccv">Romanian Cornilescu Version</option>
-          <option value="cherokee">Cherokee New Testament</option>
-         </select>
-       </div>
+          <option value="cherokee">Cherokee New Testament</option> -->
+      </select>
        <div id="passage-left"></div>
        <div id="passage-left-verse"></div>
+       <div id="passage-right"></div>
+       <div id="passage-right-verse"></div>
    </main>
    <footer>
 
