css added to make side by side boxes for translations

--- a/index.html
+++ b/index.html
@@ -30,10 +30,26 @@
           <option value="rccv">Romanian Cornilescu Version</option>
           <option value="cherokee">Cherokee New Testament</option> -->
       </select>
-       <div id="passage-left"></div>
-       <div id="passage-left-verse"></div>
-       <div id="passage-right"></div>
-       <div id="passage-right-verse"></div>
+      <div id="select-right">
+         <select id = translation-right>
+               <option value="kjv">King James Version</option>
+               <option value="web">World English Bible</option>
+               <!-- <option value="clementine">Clementine Latin Vulgate</option>
+               <option value="almeida">Portuguese Almeida Bible</option>
+               <option value="rccv">Romanian Cornilescu Version</option>
+               <option value="cherokee">Cherokee New Testament</option> -->
+        </select>
+      </div>  
+      <div id="boxes">
+         <div id="left">
+            <div id="passage-left"></div>
+            <div id="passage-left-verse"></div>
+         </div>
+         <div id="right">
+            <div id="passage-right"></div>
+            <div id="passage-right-verse"></div>
+         </div>
+      </div> 
    </main>
    <footer>
 
